# ncmapi-rs

./: Cargo.toml  README.md
src/: api.rs  hex.rs  lib.rs
src/client/: api_request.rs  mod.rs  route.rs
src/crypto/: key.rs  mod.rs  use_openssl.rs  use_rustls.rs
src/types/: mod.rs
