[package]
name = "ncmapi"
version = "0.1.13"
authors = ["akatsuki <akatsuki@gmail.com>"]
edition = "2018"
description = "NetEase Cloud Music API for Rust."
license = "MIT"
homepage = "https://github.com/two-mountains/ncmapi-rs"
documentation = "https://docs.rs/ncmapi"
repository = "https://github.com/two-mountains/ncmapi-rs"
readme = "README.md"
keywords = ["netease-cloud-muisc", "api"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
openssl = { version = "0.10", optional = true }
hex = "0.4"
rand = "0.8"
base64 = "0.21"
memory-cache-rs = "0.2.0"
cookie = "0.17"
regex = "1.5"
phf = { version = "0.11", features = ["macros"] }
thiserror = "1"

md5 = { version = "0.7.0", optional = true } 
ecb = { version = "0.1", optional = true }
cbc = { version = "0.1", optional = true }
aes = { version = "0.8", optional = true }
rsa = { git="https://github.com/Discreater/RSA", optional = true }

[features]
default = ["use-rustls", "default-rustls"]
default-openssl = ["use-openssl"]
default-rustls = ["use-rustls"]
use-rustls = ["md5", "ecb", "aes", "cbc", "rsa"]
use-openssl = ["openssl"]

