[package]
name = "ncmapi"
version = "0.1.13"
authors = ["akatsuki <akatsuki@gmail.com>"]
edition = "2018"
description = "NetEase Cloud Music API for Rust."
license = "MIT"
homepage = "https://github.com/two-mountains/ncmapi-rs"
documentation = "https://docs.rs/ncmapi"
repository = "https://github.com/two-mountains/ncmapi-rs"
readme = "README.md"
keywords = ["netease-cloud-muisc", "api"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cache = ["dep:memory-cache-rs"]
default = []

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
openssl = "0.10.64"
hex = "0.4"
rand = "0.8"
base64 = "0.22"
memory-cache-rs = { version = "0.2.0", optional = true }
cookie = "0.18"
regex = "1.10"
phf = { version = "0.11", features = ["macros"] }
thiserror = "1"
