[package]
name = "ncmapi2"
version = "0.1.13"
authors = ["akatsuki <akatsuki@gmail.com>", "mokurin000"]
edition = "2018"
description = "NetEase Cloud Music API for Rust."
license = "MIT"
homepage = "https://github.com/two-mountains/ncmapi-rs"
documentation = "https://docs.rs/ncmapi"
repository = "https://github.com/two-mountains/ncmapi-rs"
readme = "README.md"
keywords = ["netease-cloud-muisc", "api"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cache = ["dep:memory-cache-rs"]
default = []

[dependencies]
cookie = "0.18"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"

rand = "0.8"
regex = "1.10"
memory-cache-rs = { version = "0.2.0", optional = true }
phf = { version = "0.11", features = ["macros"] }
thiserror = "1"

base64 = "0.22"
hex = "0.4"

md5 = "0.7.0"
rsa = "0.9.6"
aes = "0.8.4"
ecb = { version = "0.1.2", features = ["std"] }
cbc = { version = "0.1.2", features = ["std"] }
